# python_manylinux_cmake_test_project

./: CMakeLists.txt  README.rst  setup.py
pnglinkage/: CMakeLists.txt  __init__.py  pnglinkage.c  pnglinkage.h  pnglinkage.sip
sip-4.18/: Makefile  sipconfig.py
sip-4.18/sipgen/: CMakeLists.txt  Makefile
sip-4.18/siplib/: CMakeLists.txt  Makefile  sip.h  siplib.c  siplib.sbf
zliblinkage/: CMakeLists.txt  __init__.py  zliblinkage.c  zliblinkage.h  zliblinkage.sip
